tests/lustre/typechecking/shouldFail/test_circular_mode_defs.lus
contract topSpec(x: int) returns (y: int);
let
   mode m1
   (require ::m2;);

   mode m2
   (require ::m1;);
tel
